--- a/resources/js/src/componentsstyling/dashboard.scss
+++ b/resources/js/src/componentsstyling/dashboard.scss
@@ -6,5 +6,12 @@
     margin-bottom: 0px;
 }
 .mainElements {
-    width: 500px;
+    padding: 3%;
+}
+.dashboardRender {
+    display: flex;
+    justify-content: space-evenly;
+}
+#ticketStats {
+    min-width: 65%;
 }
