styling changes for widgets

--- a/resources/js/src/componentsstyling/dashboard.scss
+++ b/resources/js/src/componentsstyling/dashboard.scss
@@ -36,10 +36,6 @@
 }
 
 #ticketNumStats {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin: 1%;
     width: 30%;
-    border: solid grey 5px;
-    background-color: white;
 }
