add members page

--- a/resources/js/src/components/projects/projectDashboard.scss
+++ b/resources/js/src/components/projects/projectDashboard.scss
@@ -1,5 +1,5 @@
 .dashboard_header {
-    font-family: "Times New Roman", Times, serif;
+    font-size: large;
 }
 .progressbar {
     border: 1px solid black;
@@ -12,4 +12,3 @@
         margin-top: 0.8rem;
     }
 }
-
