--- a/resources/js/src/componentsstyling/dashboard.scss
+++ b/resources/js/src/componentsstyling/dashboard.scss
@@ -12,6 +12,7 @@
     display: flex;
     margin: 3%;
     justify-content: space-evenly;
+    text-align: center;
 }
 #ticketStats {
     min-width: 65%;
@@ -38,6 +39,7 @@
 #ticketNumStats {
     margin: 1%;
     width: 30%;
+    text-align: center;
 }
 
 .alldash {
